# ParallelProgramming

./: CMakeLists.txt
Circle/: circ  main.cpp
HelloWorld/: CMakeLists.txt  helloworld  main.cpp
Sum/: main.cpp  sum
add_Send/: main.cpp  send
add_clientserver/: client  client.cpp  server  server.cpp
add_filewriting/: main.cpp  output.txt  write
add_intercommunicate/: inter  main.cpp
add_pthread/: addpthread.cpp  pthreadadd
add_sort/: line  merge_line.cpp  merge_par.cpp  par  par2  quick  quick_sort.cpp
add_spawn/: child  child.cpp  main.cpp  parent  spawn  worker
cmake/modules/: MacroAddObject.cmake  MacroLogFeature.cmake
lab1/: a.out  data  line.cpp  mpi_solve.cpp  parcount  plotting.py  process.py
lab1_intro/: latency  latency_measure.cpp
posix_intro/: a.out  helloworld.cpp  loop  loop.cpp  sum  sum.c
posix_main/: main.cpp  process.py  summ
